@startuml
skinparam classAttributeIconSize 0

class Application {
  +static getInstance()
  +getCompany()
  +getCurrentUserSession()

}

class UserArrivalStore {
+createUser (name, snsUserNumber, \ncitizenCardNumber, vaccineScheduleDate)
+validateUser(snsU)
+saveUser(snsU)
+addUserToRoom(snsU)
}


class Company {
+getUserArrivalStore()
+getUsersVaccineSchedule()

}

class SNSUser{
-name
-gender
-email
-birthdate
-snsUserNumber
-citizenCardNumber
}

class WaitingRoom{
+registerUserArrival(snsU)
}


class Constants{
+ROLE_RECEPTIONIST
}

class ChoosingVaccinationCenter{
+getVaccinationCenters()
}



class UserArrivalController {
+getWorking()
+newUserArrival()
+registerUserArrival(snsUserNumber)
+getUserArrivalString()

}

class UserArrivalUI {

}


UserArrivalUI ..> UserArrivalController
UserArrivalController ..> Company
UserArrivalController ..> Constants
UserArrivalStore "1"-->"1" WaitingRoom:has
WaitingRoom "1"-->"*" SNSUser: contains
UserArrivalController ..> Application
Application ..> Company
Company "1"-->"1" ChoosingVaccinationCenter: has
ChoosingVaccinationCenter "1"-->"*"VaccinationCenter :knows
UserArrivalController ..> UserArrivalStore
Company "1" --> "1" UserArrivalStore : has




@enduml